--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,71 @@
+/* * {
+    border: solid 1px;
+} */
+
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
     margin: 0;
     padding: 0;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .header-section {
     background-color: #1f2937;
     color: #f9faf8;
+    display: flex;
+    flex-direction: column;
+    padding: 0px 200px 64px;
+    align-items: center;
 }
 .header{
     display: flex;
     justify-content: space-between;
-    padding: 20px 100px;
+    width: 1120px;
 }
 
 .header-links {
     display: flex;
     gap: 12px;
+    color: #e5e7eb;
 }
 
 .logo {
     font-size: 24px;
     color: #f9faf8;
+    font-weight: bolder;
 }
 
 .hero-container {
     display: flex;
     justify-content: space-between;
-    padding: 50px 100px;
+    padding: 64px 0 0 0;
+    width: 1120px;
 }
+
+.blurb {
+    display: flex;
+    flex-flow: wrap;
+    width: 400px;
+    gap: 8px;
+}
+
 .hero-text {
     font-size: 48px;
     color: #f9faf8;
+    font-weight: 900;
+    
+}
+
+.hero-subtext {
+    color: #e5e7eb;
 }
 
 img {
-    border: solid 1px #f9faf8;
-    width: 300px;
+    border: solid #e5e7eb;
+    width: 500px;
+    height: 200px;
 }
 
 a, ul{
@@ -50,7 +76,7 @@ a, ul{
 
 .info-section {
     background-color: #f9faf8;
-    padding: 20px 100px;
+    padding: 64px 200px;
     text-align: center;
 }
 
@@ -79,18 +105,76 @@ a, ul{
 
 .quote-section {
     background-color: #e5e7eb;
-    padding: 20px 100px
+    padding: 64px 200px;
+    display: flex;
+    justify-content: center;
 }
 
 .quote-text {
     font-size: 36px;
     font-style: italic;
+    font-weight: lighter;
+    width: 1120px;
+}
+
+.signature {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: right;
 }
 
 .call-section {
-    background-color: #e5e7eb;
-    padding: 20px 100px
+    background-color: #f9faf8;
+    padding: 64px 200px;
+    display: flex;
+    justify-content: center;
+    color: #f9faf8;
+
 }
+
+.call-container {
+    background-color: #3882f6;
+    
+    padding: 24px 0px; 
+    border-radius: 12px;
+}
+
+.call-text-container { 
+    display: flex; 
+    width: 1120px;
+    margin: 64px;
+    justify-content: space-between;
+}
+
+.call-text {
+    font-weight: bold;
+}
+
+button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-weight: bold;
+    border-radius: 6px;
+    padding: 8px 24px;
+}
+button.sign-up {
+    display: flex;
+    align-self: center;
+  
+    text-align: center;
+    border: none;
+}
+button.sign-up-alt {
+    display: flex;
+    align-self: flex-end;
+    justify-self: flex-end;
+    border: solid 3px #f9faf8;
+
+    text-align: center;
+    
+   
+}
+
 
 .footer {
     background-color: #1f2937;
